Fixed chart overflow

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -16,5 +16,8 @@ body {
 }
 
 #plot {
-    min-height: 500px;
-}
+    width: 100% !important;
+    height: 100% !important;
+    max-width: 100%;
+    overflow: hidden;
+}  
